--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,10 @@
 {
-	"id": "ec280171-c67b-4cf8-923f-dc27fea91ee1",
-	"authors": ["CubeCoders Limited", "AMP Community"],
-	"origin": "https://github.com/CubeCoders/AMPTemplates.git",
-	"url": "https://github.com/CubeCoders/AMPTemplates",
-	"imagefile": "",
-	"prefix": "",
-	"repotype": "AppTemplates"
+    "id": "35e2281b-dcdd-447a-8feb-99da348332f8",
+    "authors": [
+        "Draco1544 - Made with AMP Config Generator"
+    ],
+    "origin": "https://github.com/Draco1544 - Made with AMP Config Generator/AMPTemplates.git",
+    "url": "https://github.com/Draco1544 - Made with AMP Config Generator/AMPTemplates",
+    "imagefile": "",
+    "prefix": "Draco1544 - Made with AMP Config Generator"
 }
